--- a/vue-element-admin/.env.production
+++ b/vue-element-admin/.env.production
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'production'
 
-# base api
-VUE_APP_BASE_API = '/prod-api'
+# base api /prod-api https://istudy.group:8843
+VUE_APP_BASE_API = 'https://istudy.group:8843'
 
