--- a/vue-element-admin/.env.staging
+++ b/vue-element-admin/.env.staging
@@ -3,6 +3,6 @@ NODE_ENV = production
 # just a flag
 ENV = 'staging'
 
-# base api
-VUE_APP_BASE_API = '/stage-api'
+# base api /stage-api https://istudy.group:8843
+VUE_APP_BASE_API = 'https://istudy.group:8843'
 
