--- a/vue-element-admin/.env.development
+++ b/vue-element-admin/.env.development
@@ -1,8 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# base api VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'https://localhost:9090'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
